Closed
Bug 377030
Opened 18 years ago
Closed 18 years ago
Popup menus are not firing focus upon return to application
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: scott, Assigned: aaronlev)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
1.93 KB,
patch
|
ginnchen+exoracle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.10) Gecko/20070313 Fedora/1.5.0.10-5.fc6 Firefox/1.5.0.10
Build Identifier:
The small context-menues (ie right-click on link) are not firing a focus event when returning back to the application. I would expect a focus event on the link in the given example. Please refer to item 16 on http://live.gnome.org/LSR/FocusEvents for current focus events seen on 4/10.
Reproducible: Always
Reporter | ||
Updated•18 years ago
|
Blocks: focuseventa11y
Assignee | ||
Comment 1•18 years ago
|
||
Surkov, this is a regression -- maybe from one of your event rewrites? I can't figure out the problem by looking at the code.
Assignee: aaronleventhal → surkov.alexander
Keywords: regression
Assignee | ||
Comment 2•18 years ago
|
||
I have a feeling this is my regression -- looking at it now.
Assignee | ||
Updated•18 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Updated•18 years ago
|
Assignee: surkov.alexander → aaronleventhal
Assignee | ||
Comment 3•18 years ago
|
||
Attachment #261147 -
Flags: review?(ginn.chen)
Assignee | ||
Comment 4•18 years ago
|
||
Ginn, if this looks good will you check it in for me? I will be at 3-day face to face W3C meeting, Wednesday - Friday March 12.
Attachment #261147 -
Flags: review?(ginn.chen) → review+
You need to log in
before you can comment on or make changes to this bug.
Description
•