Bug 377030 Popup menus are not firing focus upon return to applicationpatch by Aaron Leventhal review by ginn.chen